fix minor spacing issue with book landing page

--- a/css/my.css
+++ b/css/my.css
@@ -593,8 +593,7 @@ ul.posts li {
 
 
 #what-is-content-strategy {
-  margin-bottom: 2em;
-  margin-top: 3em;
+  margin-top: 2.5em;
 }
 
 #what-is-content-strategy h3 {
